--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,11 @@
         "jlevers/selling-partner-api": "^1.0",
         "guzzlehttp/guzzle": "^7.2",
         "slim/slim": "^4.7",
-        "guzzlehttp/psr7": "^1.7"
+        "guzzlehttp/psr7": "^1.7",
+        "vlucas/phpdotenv": "^5.3",
+        "slim/twig-view": "^3.2",
+        "php-di/slim-bridge": "^3.1",
+        "http-interop/http-factory-guzzle": "^1.0"
     },
     "license": "MIT",
     "authors": [
