Change default for DEBUG to true

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 # If true, sends the version=beta flag in the authorization URL, indicating to
 # Amazon that this application is being authorized in a testing state. Must be
 # set to false in production.
-DEBUG=false
+DEBUG=true
 
 # All this information can be found in the listing for your SP API app on the
 # Develop Apps page: https://sellercentral.amazon.com/sellingpartner/developerconsole
