Update for test SP API call

--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,11 @@ DEBUG=true
 LWA_CLIENT_ID=
 LWA_CLIENT_SECRET=
 SPAPI_APP_ID=
+
+# Credentials for your AWS IAM user with SP API ExecuteAPI permissions
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+
+# Only modify these if you're operating outside of the North American region
+SPAPI_AWS_REGION=us-east-1
+SPAPI_ENDPOINT=https://sellingpartnerapi-na.amazon.com
