--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "vlucas/phpdotenv": "^5.3",
         "slim/twig-view": "^3.2",
         "php-di/slim-bridge": "^3.1",
-        "http-interop/http-factory-guzzle": "^1.0"
+        "http-interop/http-factory-guzzle": "^1.0",
+        "jlevers/selling-partner-api": "^2.0"
     },
     "license": "MIT",
     "authors": [
