--- a/.env.example
+++ b/.env.example
@@ -9,7 +9,7 @@ LWA_CLIENT_ID=
 LWA_CLIENT_SECRET=
 SPAPI_APP_ID=
 
-# Credentials for your AWS IAM user with SP API ExecuteAPI permissions
+# Credentials for an AWS IAM user with SP API ExecuteAPI permissions
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 
